# perdiz

./: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
apps/api/: .env.example  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260422_0001_initial_auth.py  20260422_0002_catalog.py  20260423_0003_audit_log.py  20260423_0004_cart_and_coupons.py  20260423_0005_orders_payments.py
apps/api/app/: config.py  exceptions.py  logging.py  main.py  observability.py
apps/api/app/api/: deps.py  errors.py  rate_limit.py
apps/api/app/db/: base.py  session.py  types.py
apps/api/app/models/: __init__.py  audit_log.py  automatic_discount.py  cart.py  cart_item.py  category.py  coupon.py  coupon_redemption.py  customization_group.py  customization_option.py  email_verification_token.py  media_file.py  order.py  order_item.py  order_status_history.py  payment.py  product.py  product_image.py  refresh_token.py  user.py  volume_discount.py
apps/api/app/repositories/: admin_categories.py  admin_customization.py  admin_discounts.py  admin_product_images.py  admin_products.py  audit.py  carts.py  categories.py  coupons.py  email_verification_tokens.py  orders.py  products.py  refresh_tokens.py  users.py
apps/api/app/schemas/: admin_catalog.py  admin_coupons.py  admin_customization.py  auth.py  cart.py  catalog.py  checkout.py  orders.py  uploads.py
apps/api/app/services/: audit.py
apps/api/app/tasks/: media.py  worker.py
apps/api/app/utils/: ulid.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: _helpers.py  _order_helpers.py  conftest.py  test_admin_categories.py  test_admin_coupons.py  test_admin_customization.py  test_admin_discounts.py  (+21 more)
(+172 files in other folders)
